# wagtail-footnotes

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  dev-requirements.txt  fixtures.sh  manage.py  pyproject.toml  requirements-dev.txt  ruff.toml  setup.cfg  setup.py  testmanage.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yml  ruff.yml  test.yml  testing.yml
docs/: development.md  index.md  misc.md
footnotes/: blocks.py  fields.py  models.py  urls.py  wagtail_hooks.py  widgets.py
footnotes/migrations/: 0001_initial.py
footnotes/static/footnotes/js/: footnotes.js
footnotes/templates/footnotes/includes/: footnotes.html
tests/: apps.py  models.py  settings.py  urls.py
tests/migrations/: 0001_initial.py
tests/templates/: base.html
tests/templates/test/: endnote_reference.html  test_page_stream_field.html
tests/test/: test_blocks.py  test_fields.py  test_functional.py  test_hooks.py  test_translation.py  test_widgets.py
wagtail_footnotes/: apps.py  blocks.py  fields.py  models.py  urls.py  wagtail_hooks.py  widgets.py
wagtail_footnotes/locale/en/LC_MESSAGES/: django.po
wagtail_footnotes/locale/fr/LC_MESSAGES/: django.mo  django.po
wagtail_footnotes/locale/ro/LC_MESSAGES/: django.mo  django.po
wagtail_footnotes/migrations/: 0001_initial.py  0002_alter_footnote_unique_together.py  0003_add_bootstrap_translatable_mixin.py  0003_default_autofield_switched_to_big_auto_field.py  0004_boostrap_translatable_mixin_data_migration.py  0005_alter_footnote_locale_alter_footnote_translation_key.py  0006_alter_footnote_locale.py  0007_alter_footnote_options_footnote_sort_order.py
wagtail_footnotes/static/footnotes/css/: footnotes-admin.css
wagtail_footnotes/static/footnotes/js/: footnotes.js  footnotes_legacy.js  read-only-uuid-controller.js
wagtail_footnotes/templates/footnotes/includes/: footnotes.html
wagtail_footnotes/templates/wagtail_footnotes/admin/: footnotes_modal.html  footnotes_modal_legacy.html
wagtail_footnotes/templates/wagtail_footnotes/includes/: footnote_reference.html  footnotes.html
wagtail_footnotes/templatetags/: footnote_tags.py  wagtailfootnotes_tags.py
wagtail_footnotes/test/: apps.py  blocks.py  models.py  settings.py  urls.py
wagtail_footnotes/test/fixtures/: core.json  footnotes.json  initial_data.json  page.json  users.json
wagtail_footnotes/test/migrations/: 0001_initial.py
wagtail_footnotes/test/templates/test/: test_page_stream_field.html
wagtail_footnotes/test/tests/: test_blocks.py  test_fields.py  test_functional.py  test_hooks.py  test_models.py  test_widgets.py
wagtail_footnotes/tests/: apps.py  models.py  settings.py  urls.py
wagtail_footnotes/tests/test/: test_blocks.py  test_functional.py
wagtail_footnotes_test_app/: blocks.py  factories.py  models.py  settings.py  urls.py
wagtail_footnotes_test_app/migrations/: 0001_initial.py
wagtail_footnotes_test_app/templates/wagtail_footnotes_test_app/: test_page.html
wagtail_footnotes_test_app/tests/: test_factories.py  test_footnotes.py
