[project]
name = "wagtail-footnotes"
description = "Add footnotes to rich text in your Wagtail pages"
authors = [{name = "Cameron Lamb ", email = "hello@torchbox.com"}]
maintainers = [
    {name = "Kevin Howbrook", email="kevin.howbrook@torchbox.com"},
    {name = "Dan Braghis", email="dan.braghis@torchbox.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wagtail", "Django", "footnotes", "rich text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5",
]

dynamic = ["version"]  # will read __version__ from wagtail_footnotes/__init__.py
requires-python = ">=3.8"
dependencies = [
    "Wagtail>=4.1",
    "Django>=3.2",
]

[project.optional-dependencies]
testing = [
    "pre-commit>=3.3.0,<4",
    "tox>=4.6.4,<5",
    "black==23.7.0",
    "ruff==0.0.280",
    "coverage[toml]>=7.2,<8.0",
]

[project.urls]
Repository = "https://github.com/torchbox/wagtail-footnotes"
Changelog = "https://github.com/torchbox/wagtail-footnotes/blob/main/CHANGELOG.md"


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "wagtail_footnotes"

[tool.flit.sdist]
exclude = [
    "tests",
    "Makefile",
    "docs",
    ".*",
    "*.json",
    "*.ini",
    "*.yml",
    "CHANGELOG.md",
    "testmanage.py",
]

[tool.black]
line_length = 88
target-version = ["py38"]


[tool.ruff]
target-version = "py38"

extend-select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "PGH", # pygrep-hooks
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "W",   # pycodestyle warnings
    "YTT",   # flake8-2020
    "UP",  # pyupgrade
    "RUF100",  # unused noqa
]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["src"]
lines-between-types = 1
lines-after-imports = 2


[tool.coverage.run]
branch = true
concurrency = ["multiprocessing", "thread"]
parallel = true

source = ["wagtail_footnotes"]
omit = ["**/migrations/*", "tests/*"]

[tool.coverage.paths]
source = ["wagtail_footnotes", ".tox/py*/**/site-packages"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
skip_empty = true
skip_covered = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc.)?abstractmethod",

    # Nor complain about type checking
    "if TYPE_CHECKING:",
]
