[project]
name = "wagtail-footnotes"
description = "Add footnotes to rich text in your Wagtail pages"
authors = [{name = "Cameron Lamb ", email = "hello@torchbox.com"}]
maintainers = [
    {name = "Kevin Howbrook", email="kevin.howbrook@torchbox.com"},
    {name = "Dan Braghis", email="dan.braghis@torchbox.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wagtail", "Django", "footnotes", "rich text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 5",
    "Framework :: Wagtail :: 6",
]

dynamic = ["version"]  # will read __version__ from wagtail_footnotes/__init__.py
requires-python = ">=3.8"
dependencies = [
    "Wagtail>=5.2",
    "Django>=3.2",
]

[project.optional-dependencies]
testing = [
    "pre-commit>=3.3.0,<4",
    "tox>=4.6.4,<5",
    "ruff==0.3.7",
    "coverage[toml]>=7.2,<8.0",
    "wagtail-modeladmin>=2.0.0",
]

[project.urls]
Repository = "https://github.com/torchbox/wagtail-footnotes"
Changelog = "https://github.com/torchbox/wagtail-footnotes/blob/main/CHANGELOG.md"


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "wagtail_footnotes"

[tool.flit.sdist]
exclude = [
    "tests",
    "Makefile",
    "docs",
    ".*",
    "*.json",
    "*.ini",
    "*.yml",
    "CHANGELOG.md",
    "ruff.toml",
    "testmanage.py",
]
