[project]
name = "wagtail-footnotes"
description = "Add footnotes to rich text in your Wagtail pages"
authors = [{name = "Cameron Lamb ", email = "hello@torchbox.com"}]
maintainers = [
    {name = "Kevin Howbrook", email="kevin.howbrook@torchbox.com"},
    {name = "Dan Braghis", email="dan.braghis@torchbox.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wagtail", "Django", "footnotes", "rich text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 7",
]

dynamic = ["version"]  # will read __version__ from wagtail_footnotes/__init__.py
requires-python = ">=3.9"
dependencies = [
    "Wagtail>=7.0",
    "Django>=4.2",
]

[project.optional-dependencies]
testing = [
    "pre-commit>=4.4",
    "tox>=4.32,<5",
    "coverage>=7.11,<8.0",
    "wagtail-modeladmin>=2.2.0",
]

[project.urls]
Repository = "https://github.com/torchbox/wagtail-footnotes"
Changelog = "https://github.com/torchbox/wagtail-footnotes/blob/main/CHANGELOG.md"


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "wagtail_footnotes"

[tool.flit.sdist]
exclude = [
    "tests",
    "Makefile",
    "docs",
    ".*",
    "*.json",
    "*.ini",
    "*.yml",
    "CHANGELOG.md",
    "ruff.toml",
    "testmanage.py",
]
