[metadata]
name = wagtail-footnotes
author = Cameron Lamb
author_email = cameron.lamb@torchbox.com
description = Add footnotes to rich text in your wagtail pages
version = 0.5.0
url = https://github.com/torchbox/wagtail-footnotes
keywords =
  wagtail
  django
long_description = file:README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 40.6
  pip >= 10
include_package_data = true
packages = find:
install_requires =
    Django>=2.2, <3.3
    wagtail>=2.5, <3
