[metadata]
name = wagtail-footnotes
author = Cameron Lamb
author_email = cameron.lamb@torchbox.com
description = Add footnotes to rich text in your wagtail pages
version = 0.8.0
url = https://github.com/torchbox/wagtail-footnotes
keywords =
  wagtail
  django
long_description = file:README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.7
include_package_data = true
packages = find:
install_requires =
    Django>=3.2, <4.1
    wagtail>=2.15, <4
